syntax = "proto3";

package shopeasy.v1;

option go_package = "github.com/example/shopeasy/v1";

import "google/protobuf/timestamp.proto";
import "common.proto";

// ReviewStatus enum
enum ReviewStatus {
  REVIEW_STATUS_UNSPECIFIED = 0;
  REVIEW_STATUS_PENDING = 1;
  REVIEW_STATUS_APPROVED = 2;
  REVIEW_STATUS_REJECTED = 3;
}

// Review represents a product review
message Review {
  int64 id = 1;
  int64 product_id = 2;
  int64 user_id = 3;
  string user_name = 4;
  int32 rating = 5;           // 1-5 stars
  string title = 6;
  string content = 7;
  ReviewStatus status = 8;
  bool verified_purchase = 9;
  int32 helpful_votes = 10;
  int32 unhelpful_votes = 11;
  google.protobuf.Timestamp created_at = 12;
  google.protobuf.Timestamp updated_at = 13;
}

// ProductRatingSummary provides aggregated rating info
message ProductRatingSummary {
  int64 product_id = 1;
  double average_rating = 2;
  int32 total_reviews = 3;
  int32 five_star_count = 4;
  int32 four_star_count = 5;
  int32 three_star_count = 6;
  int32 two_star_count = 7;
  int32 one_star_count = 8;
}

// Review operations

message CreateReviewRequest {
  int64 product_id = 1;
  int64 user_id = 2;
  int32 rating = 3;
  string title = 4;
  string content = 5;
}

message CreateReviewResponse {
  Review review = 1;
}

message GetReviewRequest {
  int64 id = 1;
}

message GetReviewResponse {
  Review review = 1;
}

message ListReviewsRequest {
  int64 product_id = 1;
  Pagination pagination = 2;
  optional int32 min_rating = 3;
  optional int32 max_rating = 4;
  bool verified_only = 5;
  string sort_by = 6;         // "date", "rating", "helpful"
  bool sort_descending = 7;
}

message ListReviewsResponse {
  repeated Review reviews = 1;
  PaginatedResponse pagination = 2;
  ProductRatingSummary summary = 3;
}

message ListUserReviewsRequest {
  int64 user_id = 1;
  Pagination pagination = 2;
}

message ListUserReviewsResponse {
  repeated Review reviews = 1;
  PaginatedResponse pagination = 2;
}

message UpdateReviewRequest {
  int64 id = 1;
  int64 user_id = 2;  // Must match original author
  optional int32 rating = 3;
  optional string title = 4;
  optional string content = 5;
}

message UpdateReviewResponse {
  Review review = 1;
}

message DeleteReviewRequest {
  int64 id = 1;
  int64 user_id = 2;  // Must match original author or be admin
}

message DeleteReviewResponse {
  bool success = 1;
}

message VoteReviewRequest {
  int64 review_id = 1;
  int64 user_id = 2;
  bool helpful = 3;    // true = helpful, false = unhelpful
}

message VoteReviewResponse {
  int32 helpful_votes = 1;
  int32 unhelpful_votes = 2;
}

message GetProductRatingSummaryRequest {
  int64 product_id = 1;
}

message GetProductRatingSummaryResponse {
  ProductRatingSummary summary = 1;
}

// Moderation (admin operations)

message ModerateReviewRequest {
  int64 id = 1;
  ReviewStatus status = 2;
  optional string rejection_reason = 3;
  int64 moderated_by = 4;
}

message ModerateReviewResponse {
  Review review = 1;
}

message ListPendingReviewsRequest {
  Pagination pagination = 1;
}

message ListPendingReviewsResponse {
  repeated Review reviews = 1;
  PaginatedResponse pagination = 2;
}

service ReviewService {
  // Customer operations
  rpc CreateReview(CreateReviewRequest) returns (CreateReviewResponse);
  rpc GetReview(GetReviewRequest) returns (GetReviewResponse);
  rpc ListReviews(ListReviewsRequest) returns (ListReviewsResponse);
  rpc ListUserReviews(ListUserReviewsRequest) returns (ListUserReviewsResponse);
  rpc UpdateReview(UpdateReviewRequest) returns (UpdateReviewResponse);
  rpc DeleteReview(DeleteReviewRequest) returns (DeleteReviewResponse);
  rpc VoteReview(VoteReviewRequest) returns (VoteReviewResponse);
  rpc GetProductRatingSummary(GetProductRatingSummaryRequest) returns (GetProductRatingSummaryResponse);
  
  // Moderation
  rpc ModerateReview(ModerateReviewRequest) returns (ModerateReviewResponse);
  rpc ListPendingReviews(ListPendingReviewsRequest) returns (ListPendingReviewsResponse);
}
