syntax = "proto3";

package shopeasy.v1;

option go_package = "github.com/example/shopeasy/v1";

import "google/protobuf/timestamp.proto";
import "common.proto";

// User represents a customer account
message User {
  int64 id = 1;
  string email = 2;
  string username = 3;
  string first_name = 4;
  string last_name = 5;
  string phone = 6;
  Address billing_address = 7;
  Address shipping_address = 8;
  bool is_active = 9;
  bool email_verified = 10;
  google.protobuf.Timestamp created_at = 11;
  google.protobuf.Timestamp updated_at = 12;
}

// Authentication

message RegisterRequest {
  string email = 1;
  string username = 2;
  string password = 3;
  string first_name = 4;
  string last_name = 5;
}

message RegisterResponse {
  User user = 1;
  string confirmation_token = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  User user = 1;
  string access_token = 2;
  string refresh_token = 3;
  google.protobuf.Timestamp expires_at = 4;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenResponse {
  string access_token = 1;
  string refresh_token = 2;
  google.protobuf.Timestamp expires_at = 3;
}

message VerifyEmailRequest {
  string token = 1;
}

message VerifyEmailResponse {
  bool success = 1;
}

// User management

message GetUserRequest {
  int64 id = 1;
}

message GetUserResponse {
  User user = 1;
}

message GetUserByEmailRequest {
  string email = 1;
}

message GetUserByEmailResponse {
  User user = 1;
}

message UpdateUserRequest {
  int64 id = 1;
  optional string first_name = 2;
  optional string last_name = 3;
  optional string phone = 4;
  optional Address billing_address = 5;
  optional Address shipping_address = 6;
}

message UpdateUserResponse {
  User user = 1;
}

message ChangePasswordRequest {
  int64 user_id = 1;
  string current_password = 2;
  string new_password = 3;
}

message ChangePasswordResponse {
  bool success = 1;
}

message DeactivateUserRequest {
  int64 id = 1;
  string reason = 2;
}

message DeactivateUserResponse {
  bool success = 1;
}

service UserService {
  // Authentication
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
  rpc VerifyEmail(VerifyEmailRequest) returns (VerifyEmailResponse);
  
  // User management
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
  rpc GetUserByEmail(GetUserByEmailRequest) returns (GetUserByEmailResponse);
  rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse);
  rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse);
  rpc DeactivateUser(DeactivateUserRequest) returns (DeactivateUserResponse);
}
